Issue tracker at http://code.google.com/p/pyftpdlib/issues/list


History
=======

Version: v0.2.0 - Date: 2007-??-??
----------------------------------

RFC-related enhancements:

 * (see Issue #6) accept and process TYPE AN and TYPE L8 commands
 * (see Issue #8) be compliant with STOU output format defined in RFC 1123
 * (see Issue #10) HELP command arguments are now accepted
 * (see Issue #12) 554 error response is now returned on RETR/STOR if REST fails

Security enhancements:

 * (see Issue #3) Stop buffering when extremely long lines are received
 * (see Issue #5) Provided a way to configure / limit the number of maximum acceptable connections
 * (see Issue #5) Provided a way to configure / limit the maximum number of clients which may be connected from the same IP
 * (see Issue #11) Reject data connection when a privileged port is specified on PORT command
 * (see Issue #25) Limit the number of attempts to find a unique filename for STOU command

Usability enhancements:

 * Provided an overridable attribute to easily set number of maximum login attempts before disconnecting
 * Provided an overridable attribute to easily enable/disable FTP proxying feature
 * Docstrings are now provided for almost every method and function
 * (see Issue #30) Command help strings quality improved by adding command syntaxes
 * (see Issue #31) A compact list of recognized commands is now provided on HELP
 * (see Issue #32) We now provide a detailed error message on connection and file system errors

Test suite enhancements:

 * (see Issue #28) Added tests for ABOR command
 * File creation/removal moved into setUp and tearDown methods to avoid leaving behind orphaned temporary files in the event of a test suite failure

Bugfixes:

 * Issue #4: socket's "reuse_address" feature was used after the socket's binding
 * Issue #9: corrected path traversal vulnerability affecting file-system path translations
 * Issue #14: wrong response code was returned on CDUP